[gd_scene load_steps=17 format=3 uid="uid://dbcbavu14b6q3"]

[ext_resource type="Script" uid="uid://dwj3yagdnfxnj" path="res://Scenes/in_game_menu/shop_card.gd" id="1_48bqd"]
[ext_resource type="Texture2D" uid="uid://k24ymu6ush51" path="res://Assets/Art/wumpus pixel art.png" id="1_bwcwe"]
[ext_resource type="FontFile" uid="uid://cyu1o16vdvn6x" path="res://Assets/Fonts/Symtext.ttf" id="2_djbdi"]
[ext_resource type="FontFile" uid="uid://q1kfaq4hjaog" path="res://Assets/Fonts/ThaleahFat.ttf" id="3_ywg50"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwcwe"]
bg_color = Color(0.561573, 0.596532, 0.711135, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djbdi"]
bg_color = Color(0.396311, 0.431075, 0.545978, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sqhcc"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1vu48"]
bg_color = Color(0.0933061, 0.105259, 0.150801, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6sdb"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywg50"]
bg_color = Color(0.191531, 0.213048, 0.285221, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5mtkq"]
bg_color = Color(0.0941176, 0.105882, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgvvv"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ub1o4"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wupf"]
bg_color = Color(0.0941176, 0.105882, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_325g8"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_syh2d"]
bg_color = Color(0.192157, 0.211765, 0.286275, 1)

[node name="Panel" type="Panel"]
custom_minimum_size = Vector2(148, 148)
offset_right = 149.0
offset_bottom = 149.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bwcwe")
script = ExtResource("1_48bqd")

[node name="PopupPanel" type="PopupPanel" parent="."]
position = Vector2i(5, 45)
size = Vector2i(140, 55)
visible = true
theme_override_styles/panel = SubResource("StyleBoxFlat_djbdi")

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 140.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/MarginContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="PopupPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_sqhcc")
theme_override_styles/hover = SubResource("StyleBoxFlat_1vu48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_g6sdb")
theme_override_styles/normal = SubResource("StyleBoxFlat_ywg50")
text = " x "

[node name="Label" type="Label" parent="PopupPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/font = ExtResource("2_djbdi")
theme_override_font_sizes/font_size = 15
text = " message"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_ywg50")
theme_override_font_sizes/font_size = 18
text = "Name of Item"
horizontal_alignment = 1
autowrap_mode = 3

[node name="InfoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_font_sizes/font_size = 13
theme_override_styles/hover = SubResource("StyleBoxFlat_5mtkq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hgvvv")
theme_override_styles/normal = SubResource("StyleBoxFlat_ub1o4")
text = "  i  "

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("1_bwcwe")
expand_mode = 3
stretch_mode = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuyButton" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ywg50")
theme_override_font_sizes/font_size = 18
theme_override_styles/hover = SubResource("StyleBoxFlat_6wupf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_325g8")
theme_override_styles/normal = SubResource("StyleBoxFlat_syh2d")
text = "price"

[connection signal="pressed" from="PopupPanel/MarginContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainer/BuyButton" to="." method="_on_button_pressed"]
